Перемещение скрытых окон

--- a/catalog_cream.html
+++ b/catalog_cream.html
@@ -29,12 +29,52 @@
         <ul class="user-navigation">
           <li class="search">
             <button class="button search-button" aria-label="Поиск"></button>
+            <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+              <label class="visually-hidden" for="search">Поиск</label>
+              <input type="search" name="search" placeholder="Что ищем?">
+            </form>
           </li>
           <li class="login">
-            <a class="login" href="login.html">Вход</a>   
+            <a class="login" href="login.html">Вход</a>  
+            <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+              <p>
+                <label class="visually-hidden" for="email">Электронная почта</label>
+                <input type="email" name="email" placeholder="Электронная почта" required>
+             </p>
+             <p>
+               <label class="visually-hidden" for="password">Пароль</label>
+               <input type="password" name="password" placeholder="Пароль" required>
+              </p>
+              <p>
+               <a href="restore.html">Забыли пароль?</a>
+               <a href="registration">Новая регистрация</a>
+             </p>
+             <p>
+                <button class="button" type="submit">Войти</button>
+            </p>
+            </form>
           </li>
           <li class="cart">
             <a class="cart" href="cart.html">Пусто</a>
+
+            <table>
+              <tr>
+                <td><button class="item-remove" type="button">Закрыть</button></th>
+                <td><img src="img/item_icons/1.jpg" width="33" height="33" alt="Иконка товара"></th>
+                <td>Пломбир с апельсиновым джемом</th>
+                <td>1,5 кг х 200 руб.</th>
+                <td>300 руб.</th>
+              </tr>
+              <tr>
+                <td><button class="item-remove" type="button">Закрыть</button></td>
+                <td><img src="img/item_icons/3.jpg" width="33" height="33" alt="Иконка товара"></th></td>
+                <td>Клубничный пломбир с присыпкой из белого шоколада</td>
+                <td>1,5 кг х 300 руб.</td>
+                <td>450 руб.</td>
+              </tr>
+            </table>
+            <p><b>Итого: 750 руб.</b></p>
+            <a class="button order-button" href="order.html">Оформить заказ</a>
           </li>
         </ul>
       </nav>
@@ -68,7 +108,7 @@
           </fieldset>
           <fieldset>
             <legend>Цена:</legend>
-            <!-- ??? -->
+            <input type="range" name="price" min="0" max="1000" step="10" multiple value="500">
           </fieldset>
           <fieldset>
             <legend>Жирность:</legend>
@@ -242,46 +282,5 @@
         <p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
       </div>
     </footer>
-
-    <section class="modal modal-cart">  
-      <table>
-        <tr>
-          <td><span class="modal-item-remove">X</span></th>
-          <td><img src="img/item_icons/1.jpg" width="33" height="33" alt="Иконка товара"></th>
-          <td>Пломбир с апельсиновым джемом</th>
-          <td>1,5 кг х 200 руб.</th>
-          <td>300 руб.</th>
-        </tr>
-        <tr>
-          <td><span class="modal-item-remove">X</span></td>
-          <td><img src="img/item_icons/3.jpg" width="33" height="33" alt="Иконка товара"></th></td>
-          <td>Клубничный пломбир с присыпкой из белого шоколада</td>
-          <td>1,5 кг х 300 руб.</td>
-          <td>450 руб.</td>
-        </tr>
-      </table>
-      <p><b>Итого: 750 руб.</b></p>
-      <span class="order-button">Оформить заказ</span>
-    </section>
-
-    <section class="modal modal-login" >
-      <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-        <p>
-          <label class="visually-hidden" for="email">Электронная почта</label>
-          <input type="email" name="email" placeholder="Электронная почта" required>
-        </p>
-        <p>
-          <label class="visually-hidden" for="password">Пароль</label>
-          <input type="password" name="password" placeholder="Пароль" required>
-        </p>
-        <p>
-          <a href="restore.html">Забыли пароль?</a>
-          <a href="registration">Новая регистрация</a>
-        </p>
-        <p>
-          <button class="button" type="submit">Войти</button>
-        </p>
-      </form>
-    </section>
   </body>
 </html>
