--- a/catalog_cream.html
+++ b/catalog_cream.html
@@ -12,19 +12,19 @@
         </a>
         <ul class="site-navigation">
           <li class="site-navigation-catalog">
-            <a href="catalog.html">Каталог</a>
+            <a href="#">Каталог</a>
             <ul class="menu">
               <li class="menu-title">
-                <a href="catalog-new.html">Новинки</a>
+                <a href="#">Новинки</a>
               </li>
               <li><a href="catalog_cream.html">Сливочное</a></li>
-              <li><a href="catalog_scherbet.html">Щербеты</a></li>
-              <li><a href="catalog_ice.html">Фруктовый лед</a></li>
-              <li><a href="catalog_melorin.html">Мелорин</a></li>
+              <li><a href="#">Щербеты</a></li>
+              <li><a href="#">Фруктовый лед</a></li>
+              <li><a href="#">Мелорин</a></li>
             </ul>
           </li>
-          <li><a href="price.html">Доставка и оплата</a></li>
-          <li><a href="info.html">О Компании</a></li>
+          <li><a href="#">Доставка и оплата</a></li>
+          <li><a href="#">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
           <li class="search">
@@ -35,7 +35,7 @@
             </form>
           </li>
           <li class="login">
-            <a class="login" href="login.html">Вход</a>  
+            <a class="login" href="#">Вход</a>  
             <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
               <p>
                 <label class="visually-hidden" for="email">Электронная почта</label>
@@ -46,8 +46,8 @@
                <input type="password" name="password" placeholder="Пароль" required>
               </p>
               <p>
-               <a href="restore.html">Забыли пароль?</a>
-               <a href="registration">Новая регистрация</a>
+               <a href="#">Забыли пароль?</a>
+               <a href="#">Новая регистрация</a>
              </p>
              <p>
                 <button class="button" type="submit">Войти</button>
@@ -55,7 +55,7 @@
             </form>
           </li>
           <li class="cart">
-            <a class="cart" href="cart.html">Пусто</a>
+            <a class="cart" href="#">Пусто</a>
 
             <table>
               <tr>
@@ -74,7 +74,7 @@
               </tr>
             </table>
             <p><b>Итого: 750 руб.</b></p>
-            <a class="button order-button" href="order.html">Оформить заказ</a>
+            <a class="button order-button" href="#">Оформить заказ</a>
           </li>
         </ul>
       </nav>
@@ -89,7 +89,7 @@
       
       <ul class="breadcrumbs">
         <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="#">Каталог</a></li>
         <li class="breadcrumbs-current">Сливочное</li>
       </ul>
 
@@ -108,7 +108,7 @@
           </fieldset>
           <fieldset>
             <legend>Цена:</legend>
-            <input type="range" name="price" min="0" max="1000" step="10" multiple value="500">
+            <input type="range" name="price" min="0" max="1000" step="10" value="500">
           </fieldset>
           <fieldset>
             <legend>Жирность:</legend>
@@ -151,100 +151,99 @@
         <h2 class="visually-hidden">Товары</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/1.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             </a>
             <p class="price">310Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/2.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-кофейное с кусочками шоколада</p>
             </a>
             <p class="price">380Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/3.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
             </a>
             <p class="price">355Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
-          </li>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/4.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное крем-брюле с карамельной подливкой</p>
             </a>
             <p class="price">415Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/5.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с брусничным джемом</p>
             </a>
             <p class="price">325Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/6.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-черничное с цельными ягодами черники</p>
             </a>
             <p class="price">410Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/7.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-лимонное с карамельной присыпкой</p>
             </a>
             <p class="price">375Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/8.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с шоколадной стружкой</p>
             </a>
             <p class="price">320Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/9.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочно-ванильное с кусочками шоколада</p>
             </a>
             <p class="price">440Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/10.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с ментоловым сиропом</p>
             </a>
             <p class="price">435Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/11.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с кусочками черного шоколада</p>
             </a>
             <p class="price">355Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
           <li class="catalog-item">
-            <a href="catalog-item.html">
+            <a href="#">
               <img src="img/item_icons/12.jpg" width="200" height="200" alt="Изображение товара">
               <p>Сливочное с мятным сиропом</p>
             </a>
             <p class="price">420Р<span class="price-weight">/кг</span></p>
-            <a class="item-card" href="catalog-item.html">Быстрый просмотр</a>
+            <button class="item-card" type="button">Быстрый просмотр</button>
           </li>
         </ul>
       </section>
