--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
   			<a><img src="img/logo.svg" width="154" height="64" alt="Логотип магазина"></a>
   			<ul class="site-navigation">
   				<li class="site-navigation-catalog">
-  					<a href="catalog.html">Каталог</a>
+  					<a href="#">Каталог</a>
   					<ul class="menu">
   						<li class="menu-title">
-  							<a href="catalog-new.html">Новинки</a>
+  							<a href="#">Новинки</a>
   						</li>
   						<li><a href="catalog_cream.html">Сливочное</a></li>
-  						<li><a href="catalog_scherbet.html">Щербеты</a></li>
-  						<li><a href="catalog_ice.html">Фруктовый лед</a></li>
-  						<li><a href="catalog_melorin.html">Мелорин</a></li>
+  						<li><a href="#">Щербеты</a></li>
+  						<li><a href="#">Фруктовый лед</a></li>
+  						<li><a href="#">Мелорин</a></li>
   					</ul>
   				</li>
-  				<li><a href="price.html">Доставка и оплата</a></li>
-  				<li><a href="info.html">О Компании</a></li>
+  				<li><a href="#">Доставка и оплата</a></li>
+  				<li><a href="#">О Компании</a></li>
   			</ul>
   			<ul class="user-navigation">
           <li class="search">
@@ -33,7 +33,7 @@
             </form>
           </li>
   				<li class="login">
-            <a class="login" href="login.html">Вход</a>  
+            <a class="login" href="#">Вход</a>  
             <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
               <p>
                 <label class="visually-hidden" for="email">Электронная почта</label>
@@ -44,8 +44,8 @@
                <input type="password" name="password" placeholder="Пароль" required>
               </p>
               <p>
-               <a href="restore.html">Забыли пароль?</a>
-               <a href="registration">Новая регистрация</a>
+               <a href="#">Забыли пароль?</a>
+               <a href="#">Новая регистрация</a>
              </p>
              <p>
                 <button class="button" type="submit">Войти</button>
@@ -53,7 +53,7 @@
             </form>
           </li>
   				<li class="cart">
-            <a class="cart" href="cart.html">Пусто</a>
+            <a class="cart" href="#">Пусто</a>
           </li>
   			</ul>
   		</nav>
@@ -71,15 +71,15 @@
   			<ul class="slider-list">
   				<li class="slider-item">
   					<p class="slider-description"><b>Крем-брюле и пломбир с малиновым джемом</b></p>
-  					<a href="catalog.html">Давайте оба!</a>
+  					<a href="#">Давайте оба!</a>
   				</li>
   				<li class="slider-item">
   					<p class="slider-description"><b>Шоколадный пломбир и лимонный сорбет</b></p>
-  					<a href="catalog.html">Давайте оба!</a>
+  					<a href="#">Давайте оба!</a>
   				</li>
   				<li class="slider-item">
   					<p class="slider-description"><b>Пломбир с помадкой и клубничный щербет</b></p>
-  					<a href="catalog.html">Давайте оба!</a>
+  					<a href="#">Давайте оба!</a>
   				</li>
   			</ul>
   		</section>
@@ -90,12 +90,12 @@
   				<li class="stock-item stock-raspberry">
   					<h3>Малинка даром!</h3>
   					<p>При покупке 2 кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-  					<a href="catalog.html">Хочу варенье!</a>
+  					<a href="#">Хочу варенье!</a>
   				</li>
   				<li class="stock-item stock-chocolate">
   					<h3>Шоколадки даром!</h3>
   					<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей школадной присыпки совершенно бесплатно.</p>
-  					<a href="catalog.html">Хочу шоколадки!</a>
+  					<a href="#">Хочу шоколадки!</a>
   				</li>		
   			</ul>
   		</section>
@@ -104,28 +104,28 @@
   			<h2 class="visually-hidden">Товары</h2>
   			<ul class="catalog-list">
   				<li class="catalog-item">
-  					<a href="catalog-item.html">
+  					<a href="#">
   						<img src="img/item_icons/1.jpg" width="200" height="200" alt="Изображение товара">
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   					</a>
   					<p class="price">310Р<span class="price-weight">/кг</span></p>
   				</li>
   				<li class="catalog-item">
-  					<a href="catalog-item.html">
+  					<a href="#">
   						<img src="img/item_icons/2.jpg" width="200" height="200" height="150" alt="Изображение товара">
   						<p>Сливочно-кофейное с кусочками шоколада</p>
   					</a>
   					<p class="price">380Р<span class="price-weight">/кг</span></p>
   				</li>
   				<li class="catalog-item">
-  					<a href="catalog-item.html">
+  					<a href="#">
   						<img src="img/item_icons/3.jpg" width="200" height="200" alt="Изображение товара">
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
   					</a>
   					<p class="price">355Р<span class="price-weight">/кг</span></p>
   				</li>
   				<li class="catalog-item">
-  					<a href="catalog-item.html">
+  					<a href="#">
   						<img src="img/item_icons/4.jpg" width="200" height="200" alt="Изображение товара">
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
   					</a>
@@ -154,7 +154,7 @@
 
   		<section class="news">
   			<h2 class="news-title">Новое в нашем блоге</h2>
-  			<p class="news-text"><a href="blog.html">10 способов сервировки фруктовых щербетов к столу</a></p>
+  			<p class="news-text"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
   		</section>
 
   		<section class="dispatch">
@@ -186,7 +186,7 @@
   					<span class="bold">8 812 450-25-25</span><br>
   					(с 10 до 20 ежедневно)
   				</p>
-  				<a class="button" href="feedback.html">Форма обратной связи</a>
+  				<a class="button" href="#">Форма обратной связи</a>
   			</div>
   		</section>
   	</main>
@@ -224,7 +224,7 @@
           <input type="text" name="name" placeholder="Как вас зовут?" required>
         </p>
         <p>
-          <label class="visually-hidden" for="email">Имя</label>
+          <label class="visually-hidden" for="email">Электронная почта</label>
           <input type="email" name="email" placeholder="Ваша почта для ответа?" required>
         </p>
         <p>
